Binary Classification Problem

--- a/Applying SVM model.ipynb
+++ b/Applying SVM model.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Importing libraries",
+   "id": "d87ae8145a0c3ec8"
+  },
+  {
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:38.270505Z",
-     "start_time": "2025-03-02T11:06:38.147034Z"
+     "end_time": "2025-03-17T12:05:47.385704Z",
+     "start_time": "2025-03-17T12:05:47.280129Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -17,17 +21,17 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import svm\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
    ],
+   "id": "19009d774ed9bfea",
    "outputs": [],
    "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:40.334670Z",
-     "start_time": "2025-03-02T11:06:40.331670Z"
+     "end_time": "2025-03-17T12:05:47.687127Z",
+     "start_time": "2025-03-17T12:05:47.684369Z"
     }
    },
    "cell_type": "code",
@@ -40,10 +44,16 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Downloading our processed dataset ",
+   "id": "232b58aad66a8fcf"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:41.486838Z",
-     "start_time": "2025-03-02T11:06:41.357508Z"
+     "end_time": "2025-03-17T12:05:48.209210Z",
+     "start_time": "2025-03-17T12:05:48.090525Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +65,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:42.186634Z",
-     "start_time": "2025-03-02T11:06:42.183305Z"
+     "end_time": "2025-03-17T12:05:48.301252Z",
+     "start_time": "2025-03-17T12:05:48.297991Z"
     }
    },
    "cell_type": "code",
@@ -100,8 +110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:43.062699Z",
-     "start_time": "2025-03-02T11:06:43.042993Z"
+     "end_time": "2025-03-17T12:05:48.527735Z",
+     "start_time": "2025-03-17T12:05:48.509679Z"
     }
    },
    "cell_type": "code",
@@ -148,8 +158,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:43.918820Z",
-     "start_time": "2025-03-02T11:06:43.907415Z"
+     "end_time": "2025-03-17T12:05:48.704087Z",
+     "start_time": "2025-03-17T12:05:48.693599Z"
     }
    },
    "cell_type": "code",
@@ -159,10 +169,22 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Did double checking for missing values and dropped Id column.",
+   "id": "f1a817a01517b1e2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Encoding values ",
+   "id": "4da6278ecacf3cad"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:44.745037Z",
-     "start_time": "2025-03-02T11:06:44.737532Z"
+     "end_time": "2025-03-17T12:05:49.290480Z",
+     "start_time": "2025-03-17T12:05:49.283456Z"
     }
    },
    "cell_type": "code",
@@ -186,8 +208,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:45.605730Z",
-     "start_time": "2025-03-02T11:06:45.592938Z"
+     "end_time": "2025-03-17T12:05:49.530251Z",
+     "start_time": "2025-03-17T12:05:49.518305Z"
     }
    },
    "cell_type": "code",
@@ -202,8 +224,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:46.513191Z",
-     "start_time": "2025-03-02T11:06:46.483478Z"
+     "end_time": "2025-03-17T12:05:49.775437Z",
+     "start_time": "2025-03-17T12:05:49.745155Z"
     }
    },
    "cell_type": "code",
@@ -215,8 +237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:58.269454Z",
-     "start_time": "2025-03-02T11:06:58.262489Z"
+     "end_time": "2025-03-17T12:05:49.965231Z",
+     "start_time": "2025-03-17T12:05:49.958731Z"
     }
    },
    "cell_type": "code",
@@ -228,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:06:59.459467Z",
-     "start_time": "2025-03-02T11:06:59.401521Z"
+     "end_time": "2025-03-17T12:05:50.276428Z",
+     "start_time": "2025-03-17T12:05:50.225247Z"
     }
    },
    "cell_type": "code",
@@ -548,8 +570,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:00.793461Z",
-     "start_time": "2025-03-02T11:07:00.789448Z"
+     "end_time": "2025-03-17T12:05:50.450812Z",
+     "start_time": "2025-03-17T12:05:50.447099Z"
     }
    },
    "cell_type": "code",
@@ -573,10 +595,22 @@
    "execution_count": 12
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Satisfaction values seem pretty balanced in numbers",
+   "id": "d887e9daa806dc67"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Assigning label",
+   "id": "34cc18b509980b8b"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:04.324971Z",
-     "start_time": "2025-03-02T11:07:04.318941Z"
+     "end_time": "2025-03-17T12:05:51.259953Z",
+     "start_time": "2025-03-17T12:05:51.253429Z"
     }
    },
    "cell_type": "code",
@@ -591,8 +625,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:07.668926Z",
-     "start_time": "2025-03-02T11:07:07.665233Z"
+     "end_time": "2025-03-17T12:05:51.482864Z",
+     "start_time": "2025-03-17T12:05:51.479623Z"
     }
    },
    "cell_type": "code",
@@ -624,10 +658,16 @@
    "execution_count": 14
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Standardizing the Feature Data",
+   "id": "8334670144cecf65"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:16.100227Z",
-     "start_time": "2025-03-02T11:07:16.097487Z"
+     "end_time": "2025-03-17T12:05:52.074079Z",
+     "start_time": "2025-03-17T12:05:52.071583Z"
     }
    },
    "cell_type": "code",
@@ -639,8 +679,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:17.186617Z",
-     "start_time": "2025-03-02T11:07:17.156524Z"
+     "end_time": "2025-03-17T12:05:52.545716Z",
+     "start_time": "2025-03-17T12:05:52.516780Z"
     }
    },
    "cell_type": "code",
@@ -1070,8 +1110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:17.945889Z",
-     "start_time": "2025-03-02T11:07:17.905247Z"
+     "end_time": "2025-03-17T12:05:52.941559Z",
+     "start_time": "2025-03-17T12:05:52.902118Z"
     }
    },
    "cell_type": "code",
@@ -1083,8 +1123,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:18.793936Z",
-     "start_time": "2025-03-02T11:07:18.790395Z"
+     "end_time": "2025-03-17T12:05:53.248061Z",
+     "start_time": "2025-03-17T12:05:53.245541Z"
     }
    },
    "cell_type": "code",
@@ -1116,8 +1156,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:19.747979Z",
-     "start_time": "2025-03-02T11:07:19.745236Z"
+     "end_time": "2025-03-17T12:05:53.576121Z",
+     "start_time": "2025-03-17T12:05:53.572715Z"
     }
    },
    "cell_type": "code",
@@ -1127,10 +1167,16 @@
    "execution_count": 19
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Train/Test Split",
+   "id": "4afcb27eb5acfe83"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:20.576859Z",
-     "start_time": "2025-03-02T11:07:20.539457Z"
+     "end_time": "2025-03-17T12:05:54.312118Z",
+     "start_time": "2025-03-17T12:05:54.279032Z"
     }
    },
    "cell_type": "code",
@@ -1142,8 +1188,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:21.453928Z",
-     "start_time": "2025-03-02T11:07:21.450938Z"
+     "end_time": "2025-03-17T12:05:54.762540Z",
+     "start_time": "2025-03-17T12:05:54.759274Z"
     }
    },
    "cell_type": "code",
@@ -1164,74 +1210,16 @@
    "execution_count": 21
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:22.191480Z",
-     "start_time": "2025-03-02T11:07:22.189550Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "\n",
-    "#training the model\n",
-    "classifier_linear = svm.SVC( C=1.0 ,kernel='linear')"
-   ],
-   "id": "59cfcbc74faf1dae",
-   "outputs": [],
-   "execution_count": 22
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Creating a model ",
+   "id": "ee1f406c6728efe5"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:23.103316Z",
-     "start_time": "2025-03-02T11:07:23.096508Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df.isna().sum()\n",
-   "id": "aa5f6206e6889861",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "satisfaction_v2                      0\n",
-       "Age                                  0\n",
-       "Class                                0\n",
-       "Flight Distance                      0\n",
-       "Inflight wifi service                0\n",
-       "Departure/Arrival time convenient    0\n",
-       "Ease of Online booking               0\n",
-       "Gate location                        0\n",
-       "Food and drink                       0\n",
-       "Online boarding                      0\n",
-       "Seat comfort                         0\n",
-       "Inflight entertainment               0\n",
-       "On-board service                     0\n",
-       "Leg room service                     0\n",
-       "Baggage handling                     0\n",
-       "Checkin service                      0\n",
-       "Inflight service                     0\n",
-       "Cleanliness                          0\n",
-       "Departure Delay in Minutes           0\n",
-       "Arrival Delay in Minutes             0\n",
-       "Gender_Male                          0\n",
-       "Customer Type_disloyal Customer      0\n",
-       "Type of Travel_Personal Travel       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 23
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-02T11:07:31.063798Z",
-     "start_time": "2025-03-02T11:07:31.059504Z"
+     "end_time": "2025-03-17T12:05:55.232522Z",
+     "start_time": "2025-03-17T12:05:55.228878Z"
     }
    },
    "cell_type": "code",
@@ -1240,7 +1228,7 @@
     "\n",
     "def train_and_evaluate_svc(X_train, Y_train, X_test=None, Y_test=None, kernel='sigmoid', C=1.0):\n",
     "     \n",
-    "    # 1. Create the SVC with the chosen kernel and C\n",
+    "    # 1. Create the SVC \n",
     "    classifier = svm.SVC(kernel=kernel, C=C)\n",
     "\n",
     "    # 2. Fit on the training data\n",
@@ -1253,7 +1241,7 @@
     "    train_recall = recall_score(Y_train, train_preds, average='macro')\n",
     "    train_f1 = f1_score(Y_train, train_preds, average='macro')\n",
     "\n",
-    "    # 4. Evaluate on the test data (if provided)\n",
+    "    # 4. Evaluate on the test data \n",
     "    test_accuracy = None\n",
     "    test_precision = None\n",
     "    test_recall = None\n",
@@ -1288,18 +1276,24 @@
    ],
    "id": "1c0aef4626bdb3a5",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Training with 3 different Kernels",
+   "id": "64da805967e3e187"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T11:17:57.692139Z",
-     "start_time": "2025-03-02T11:07:32.102805Z"
+     "end_time": "2025-03-17T12:19:30.655446Z",
+     "start_time": "2025-03-17T12:08:45.463236Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Example usage:\n",
+    "\n",
     "clf, (train_acc, train_prec, train_rec, train_f1), (test_acc, test_prec, test_rec, test_f1) = \\\n",
     "    train_and_evaluate_svc(X_train, Y_train, X_test, Y_test, kernel='sigmoid', C=1.0)\n"
    ],
@@ -1321,13 +1315,13 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T10:34:04.100245Z",
-     "start_time": "2025-02-24T10:31:42.055402Z"
+     "end_time": "2025-03-17T12:08:34.129141Z",
+     "start_time": "2025-03-17T12:06:19.855806Z"
     }
    },
    "cell_type": "code",
@@ -1343,18 +1337,18 @@
      "output_type": "stream",
      "text": [
       "Kernel: rbf, C: 1.0\n",
-      "Training Accuracy: 0.9589\n",
-      "Training Precision (macro): 0.9597\n",
-      "Training Recall (macro): 0.9567\n",
-      "Training F1-score (macro): 0.9581\n",
-      "Test Accuracy: 0.9531\n",
-      "Test Precision (macro): 0.9536\n",
-      "Test Recall (macro): 0.9508\n",
-      "Test F1-score (macro): 0.9521\n"
+      "Training Accuracy: 0.9593\n",
+      "Training Precision (macro): 0.9602\n",
+      "Training Recall (macro): 0.9571\n",
+      "Training F1-score (macro): 0.9585\n",
+      "Test Accuracy: 0.9544\n",
+      "Test Precision (macro): 0.9550\n",
+      "Test Recall (macro): 0.9521\n",
+      "Test F1-score (macro): 0.9534\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 23
   },
   {
    "metadata": {
@@ -1388,14 +1382,6 @@
     }
    ],
    "execution_count": 25
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "edd9cdb674c94bd6"
   }
  ],
  "metadata": {
